added css to buttons

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,11 +72,11 @@ table.upper{
     background-color: var(--secondary-color);
 }
 
+
 .category-table td{
     border: 1px solid var(--second-border-color);
 }
 .category-table td:hover{
-    background-color:var(--primary-color);
     cursor: pointer;
 }
 .game-picture{
@@ -84,7 +84,8 @@ table.upper{
 }
 .game-picture img{
     margin-top: 2%;
-    width:35%;
+    margin-bottom: 1%;
+    width:30%;
 }
 .download-link:hover{
     color: var(--primary-color);
@@ -101,6 +102,28 @@ table.upper{
 .download-button:hover {
     background-color: var(--second-border-color);
 }
+
+
+.my-button{
+    width: 100%;
+    height: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+    background-color: gainsboro;
+    border: none;
+}
+
+.my-button:hover{
+    background-color: var(--secondary-color);
+    cursor: pointer;
+}
+
+.my-button:focus{
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border: 1px solid var(--primary-color);
+}
+
 
 
 
