--- a/styles/style.css
+++ b/styles/style.css
@@ -104,24 +104,22 @@ table.upper{
 }
 
 
-.my-button{
-    width: 100%;
-    height: 100%;
-    table-layout: fixed;
-    border-collapse: collapse;
-    background-color: gainsboro;
-    border: none;
+.link{
+    text-decoration: none;
 }
 
-.my-button:hover{
-    background-color: var(--secondary-color);
-    cursor: pointer;
-}
-
-.my-button:focus{
+.link:hover{
     color: var(--primary-color);
-    background-color: var(--secondary-color);
     border: 1px solid var(--primary-color);
+}
+
+.link:focus{
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
+.link:active{
+    color: red;
 }
 
 
