--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,9 @@ table.upper{
     margin-bottom: 1%;
     width:30%;
 }
+.download-link:hover{
+    color: var(--primary-color);
+}
 
 .download-button {
     display: inline-block;
@@ -101,6 +104,24 @@ table.upper{
     background-color: var(--border-color);
 }
 
+.my-button{
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+    background-color: var(--second-border-color);
+    border: none;
+
+}
+.my-button:hover{
+    background-color: var(--secondary-color);
+    cursor: pointer;
+}
+.my-button:focus {
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+
+    background-color: var(--secondary-color);
+}
 
 .link{
     border-collapse: collapse;
