--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,3 @@
-:root{
-    --primary-color:#6699FF;
-    --secondary-color: #f2f2f2;
-    --border-color:#ddd;
-    --second-border-color: #dcdcdc;
-    --button-color:#FFFFFF;
-
-}
-
 *{
     margin: 0px;
     padding: 0px;
@@ -21,7 +12,7 @@ td{
 
 table {
     width: 100%;
-    border: 1px solid var(--border-color);
+    border: 1px solid #ddd;
     text-align: center;
     table-layout: fixed;
 
@@ -47,7 +38,7 @@ table {
 
 table.upper{
     margin:0 auto;
-    background: var(--primary-color);
+    background: #6699FF;
 }
 .upper{
     padding: 2.5%;
@@ -58,7 +49,7 @@ table.upper{
 
 .title{
     font-size: 350%;
-    color: var(--secondary-color);
+    color: #f2f2f2;
     width: 65%;
 }
 .games-table td{
@@ -66,16 +57,16 @@ table.upper{
 }
 
 .games-table tr:nth-child(even){
-    background-color:var(--secondary-color);
+    background-color: #f2f2f2;
 }
 
 .category-table th{
-    background-color: var(--secondary-color);
+    background-color: #f2f2f2;
 }
 
 
 .category-table td{
-    border: 1px solid var(--second-border-color);
+    border: 1px solid #dcdcdc;
 }
 .category-table td:hover{
     cursor: pointer;
@@ -89,57 +80,57 @@ table.upper{
     width:30%;
 }
 .download-link:hover{
-    color: var(--primary-color);
+    color: #6699FF;
 }
 
 .download-button {
     display: inline-block;
     padding: 4% 8%;
-    background-color: var(--primary-color);
-    color: var(--button-color);
+    background-color: #6699FF;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
 .download-button:hover {
-    background-color: var(--border-color);
+    background-color: #ddd;
 }
 
 .my-button{
     width: 100%;
     height: 100%;
     border-collapse: collapse;
-    background-color: var(--second-border-color);
+    background-color: #dcdcdc;
     border: none;
 
 }
 .my-button:hover{
-    background-color: var(--secondary-color);
+    background-color: #f2f2f2;
     cursor: pointer;
 }
 .my-button:focus {
-    color: var(--primary-color);
-    border: 2px solid var(--primary-color);
+    color: #6699FF;
+    border: 2px solid #6699FF;
 
-    background-color: var(--secondary-color);
+    background-color: #f2f2f2;
 }
 
 .link{
     border-collapse: collapse;
     border: none;
     text-decoration: none;
-    color:var(--primary-color) ;
+    color: #6699FF;
 }
 
 .link:hover{
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    border: 1px solid var(--primary-color);
+    color: #6699FF;
+    background-color: #f2f2f2;
+    border: 1px solid #6699FF;
 }
 
 .link:focus{
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    border: 1px solid var(--primary-color);
+    color: #6699FF;
+    background-color: #f2f2f2;
+    border: 1px solid #6699FF;
 }
 
 
