--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@ table.upper{
 .game-picture{
     width: 20%;
 }
-.game-picture img{
+.game-picture a img{
     margin-top: 2%;
     margin-bottom: 1%;
     width:30%;
