--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -18,17 +18,21 @@
     width:30%;
 }
 
+.homeContainer tr > td > a > img {
+    width:100%;
+}
+
 .homeContainer tr > td :hover{
     background-color: #ddd;
 }
 
 .homeContainer tr > td > a  {
+    margin-top: 2%;
+    margin-bottom: 1%;
+    width:30%;
     display: inline-block;
     padding: 4% 8%;
     background-color: #6699FF;
     color: #FFFFFF;
     text-decoration: none;
 }
-
-
-
