--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -3,7 +3,6 @@
     border: 1px solid #ddd;
     text-align: center;
     table-layout: fixed;
-    height: 100px;
 }
 .homeContainer tr:nth-child(even) {
     background-color: #f2f2f2;
@@ -20,7 +19,9 @@
 }
 
 .homeContainer tr > td > a > img {
-    width:100%;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    width:30%;
 }
 
 .homeContainer tr > td :hover{
@@ -48,9 +49,6 @@
     text-decoration: none;
 }
 
-.homeContainer tr > td > a :hover {
-    background-color: #3366CC;
-}
 
 .pagination{
     background-color: black;
@@ -75,12 +73,7 @@
     background-color: #ddd;
 }
 
-.numberButtons.active{
-    background-color: red;
-}
-.numberButtons.visited{
-    background-color: red;
-}
+
 .buttonDiv{
     margin-top: 10px;
 }
