--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@
 td{
     vertical-align: top;
     height: 50px;
-
 }
 
 table {
@@ -18,6 +17,7 @@ table {
 
 }
 .lower {
+    height: 1000px;
     border: none;
     margin-top: 0.5%;
 }
@@ -54,6 +54,7 @@ table.upper{
 }
 .games-table td{
     vertical-align: middle;
+    height: 50px;
 }
 
 .games-table tr:nth-child(even){
