--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -28,21 +28,27 @@
     background-color: #ddd;
 }
 
+
 .downloadButton  {
+    background-color: #6699ff;
     margin-top: 2%;
     margin-bottom: 1%;
     width:30%;
     display: inline-block;
     padding: 4% 8%;
-    background-color: #6699FF;
     color: #FFFFFF;
     text-decoration: none;
+}
+
+.buttonContainer{
+    position: relative;
+    display: inline-block;
+    width: 10px;
 }
 
 .myButton  {
     margin-top: 2%;
     margin-bottom: 1%;
-    width:30%;
     display: inline-block;
     padding: 4% 8%;
     color: #FFFFFF;
