--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -9,40 +9,43 @@
 }
 .homeContainer td {
     vertical-align: middle;
-    height: 50px;
-}
-
-.homeContainer tr > td > img {
-    margin-top: 2%;
-    margin-bottom: 1%;
-    width:30%;
+    height: 70px;
+    width: 100px;
 }
 
 .homeContainer tr > td > a > img {
-    margin-top: 2%;
-    margin-bottom: 1%;
-    width:30%;
-}
+     margin-top: 2%;
+     margin-bottom: 1%;
+     height: 70px;
+     width: 100px;
+ }
 
-.homeContainer tr > td :hover{
-    background-color: #ddd;
-}
 
 .downloadButton  {
-    margin-top: 2%;
-    margin-bottom: 1%;
-    width:30%;
     display: inline-block;
-    padding: 4% 8%;
-    background-color: #6699FF;
-    color: #FFFFFF;
+    color: black;
     text-decoration: none;
+    padding: 2px 5px 2px 5px;
+    border: 1px solid #ddd;
+    height: 20px;
+    width: 117px;
+
 }
+
+.downloadButtonContainer{
+    background-image: url("../public/button.jpg");
+    height: 25px;
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    vertical-align: center;
+
+}
+
 
 .myButton  {
     margin-top: 2%;
     margin-bottom: 1%;
-    width:30%;
     display: inline-block;
     padding: 4% 8%;
     color: #FFFFFF;
@@ -64,7 +67,7 @@
     border: 1px solid #ddd;
     font-size: 20px;
     margin-left: 2px;
-   background-color: #6699ff;
+   background-color: orange;
     margin-top: 100px;
     max-width: 5px;
 }
