--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -36,7 +36,7 @@
     background-image: url("../public/button.jpg");
     height: 25px;
     background-repeat: no-repeat;
-    background-size: 50% 100%;
+    background-size: 128px ;
     background-position: center;
     vertical-align: center;
 
