--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -33,7 +33,7 @@
 }
 
 .downloadButtonContainer{
-    background-image: url("../public/button.jpg");
+    background-image: url("../public/button.jpeg");
     height: 25px;
     background-repeat: no-repeat;
     background-size: 128px ;
